fix: Static link LuaJIT and fix scan timeout handling
- Static link LuaJIT to avoid runtime dependency
- Handle device.ErrTimeout in scan to show results on timeout
- Remove tabless separator breaking column alignment

--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -35,6 +35,9 @@ jobs:
       - name: Build
         run: |
           mkdir -p dist
+          # Static link LuaJIT to avoid runtime dependency
+          LUAJIT_PREFIX=$(brew --prefix luajit)
+          CGO_LDFLAGS="-L${LUAJIT_PREFIX}/lib ${LUAJIT_PREFIX}/lib/libluajit-5.1.a" \
           go build -ldflags "-s -w -X main.version=${{ github.ref_name }} -X main.commit=$(git rev-parse --short HEAD)" \
             -o dist/blim ./cmd/blim
 
